<resources>
    <string name="app_name">Calculator</string>
    <string name="Clear_Entry">CE</string>
    <string name="Clear">C</string>
    <string name="Backspace">BS</string>
    <string name="Divide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="Multiply">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="Subtract">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="Add">+</string>
    <string name="Change_Mark">+/-</string>
    <string name="zero">0</string>
    <string name="Dot">.</string>
    <string name="Equal">=</string>
</resources>